# RAD-SRAC

./: .gitignore  README.md  cli.py  pyproject.toml
results/: 00_kits23_rag_anthropic_claude-3-5-sonnet-latest.jsonl  00_kits23_rag_anthropic_claude-3-5-sonnet-latest_False.jsonl  00_kits23_rag_anthropic_claude-3-5-sonnet-latest_True_1.jsonl  00_kits23_rag_anthropic_claude-3-5-sonnet-latest_True_10.jsonl  00_kits23_rag_anthropic_claude-3-5-sonnet-latest_True_15.jsonl  00_kits23_rag_anthropic_claude-3-5-sonnet-latest_True_2.jsonl  00_kits23_rag_anthropic_claude-3-5-sonnet-latest_True_25.jsonl  00_kits23_rag_anthropic_claude-3-5-sonnet-latest_True_3.jsonl  00_kits23_rag_anthropic_claude-3-5-sonnet-latest_True_5.jsonl  00_kits23_rag_gemini_gemini-1.5-pro.jsonl  00_kits23_rag_gemini_gemini-1.5-pro_False.jsonl  00_kits23_rag_gemini_gemini-1.5-pro_True_1.jsonl  00_kits23_rag_gemini_gemini-1.5-pro_True_10.jsonl  00_kits23_rag_gemini_gemini-1.5-pro_True_15.jsonl  00_kits23_rag_gemini_gemini-1.5-pro_True_2.jsonl  00_kits23_rag_gemini_gemini-1.5-pro_True_25.jsonl  00_kits23_rag_gemini_gemini-1.5-pro_True_3.jsonl  00_kits23_rag_openrouter_google_gemini-flash-1.5-8b.jsonl  00_kits23_rag_openrouter_mistralai_pixtral-12b.jsonl  00_kits23_rag_openrouter_openai_gpt-4o-2024-11-20.jsonl  00_kits23_rag_openrouter_openai_gpt-4o-2024-11-20_False.jsonl  00_kits23_rag_openrouter_openai_gpt-4o-2024-11-20_True_1.jsonl  00_kits23_rag_openrouter_openai_gpt-4o-2024-11-20_True_10.jsonl  00_kits23_rag_openrouter_openai_gpt-4o-2024-11-20_True_15.jsonl  00_kits23_rag_openrouter_x-ai_grok-vision-beta.jsonl  (+57 more)
(+19 files in other folders)
